ап страниц и адресов

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
       <span class="selected">UI</span>
       <ul>
         <li class="page-list__item">
-          <a href="ui.html" title="Файл с дизайном: _psd/000 - icon.psd" class="link">UI, иконки и типовая текстовая страница</a>
+          <a href="elements.html" title="Файл с дизайном: _psd/000 - icon.psd" class="link">UI, иконки и типовая текстовая страница</a>
           <span class="link__spacer">—</span>
           <span class="link__file-name" title="app/templates/_ui.html">_ui.html</span>
           <div class="d-progress design">
